# bilibili-backup

./: .gitignore  .project-status.md  AGENT2_COMPLETION_REPORT.md  AGENT6_COMPLETION_REPORT.md  AUTH_SERVICE_INTEGRATION.md  DELIVERY.md  DEPLOYMENT_SUCCESS.md  DOCUMENTATION_INDEX.md  FEATURE_MATRIX.md  FINAL_DELIVERY.md  FINAL_STATUS.md  FOLLOWING_SERVICE_INTEGRATION.md  GITHUB_ACTIONS.md  HISTORY_SERVICES_QUICKREF.md  HISTORY_SERVICE_INTEGRATION.md  INTEGRATION_CHECKLIST.md  INTEGRATION_REPORT.md  INTEGRATION_SUMMARY.md  PROJECT_SUMMARY.md  PUSH_GUIDE.md  QUICKSTART.md  README.md  SSH_SETUP.md  USER_GUIDE.md  WINDOWS_BUILD.md  index.html  install-dependencies.sh  package-lock.json  package.json  vite.config.ts  交付清单.txt
.github/workflows/: build.yml  quick-build.yml
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: client.rs  endpoints.rs  error.rs  mod.rs  models.rs  pagination.rs  sign.rs
src-tauri/src/commands/: auth.rs  favorites.rs  following.rs  history.rs  mod.rs
src-tauri/src/services/: auth.rs  bangumi.rs  blacklist.rs  favorites.rs  follower.rs  following.rs  history.rs  mod.rs  toview.rs
src-tauri/src/utils/: mod.rs
src/components/: Layout.tsx
src/pages/: Bangumi.tsx  Blacklist.tsx  Dashboard.tsx  Favorites.tsx  Followers.tsx  Following.tsx  History.tsx  Login.tsx  ToView.tsx
src/types/: api.ts  auth.ts
src/utils/: api.ts
